--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "prop-types": "^15.6.1",
     "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.2"
+    "react-native": "0.54.2",
+    "react-navigation": "^1.5.8",
+    "reactotron-react-native": "^1.14.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
     "babel-jest": "23.0.0-alpha.0",
+    "babel-plugin-module-resolver": "^3.1.0",
     "babel-preset-react-native": "4.0.0",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-import-resolver-babel-module": "^4.0.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
