--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "apisauce": "^0.14.3",
     "prop-types": "^15.6.1",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.2",
@@ -14,7 +15,10 @@
     "react-native-vector-icons": "^4.5.0",
     "react-native-video": "^2.0.0",
     "react-navigation": "^1.5.8",
-    "reactotron-react-native": "^1.14.0"
+    "react-redux": "^5.0.7",
+    "reactotron-react-native": "^1.14.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
